Fichiers Header.php et footer.php en place + logo intégrer. Prochaine étape donner un style au header

--- a/themes/planty/css/theme.css
+++ b/themes/planty/css/theme.css
@@ -1,3 +1,13 @@
-.home {
-    background-color: blue;
+
+.site-header {
+   
 }
+
+
+
+/* Styles pour le logo */
+.logo a img {
+            
+            }
+
+
