--- a/themes/planty/css/theme.css
+++ b/themes/planty/css/theme.css
@@ -1,13 +1,92 @@
+/********** GENERAL ***********/
 
-.site-header {
-   
+/* Pour tous le site : Reset des valeurs par defaut */
+*, 
+::before,
+::after{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+*{
+    font-family: '', sans-serif;
+}
+html{
+    font-family: '', sans-serif;
+}
+:root{
+    --main-color: white;
+    --main-bg-color: ;
+    --filter-bg-color: ;
+    --font-size-small: ;
+    --font-size-medium: ;
+    --max-width: ;
+    --min-width: ;
 }
 
 
 
-/* Styles pour le logo */
-.logo a img {
-            
-            }
+/********** HEADER **************/
+#site-header.sticky-top{
+    position: sticky;
+    top: 0;
+}
+.site-header{
+    width: 100%; /* Largeur de 100% pour s'adapter à la largeur de l'écran */
+    height: 80px;
+    background-color: white;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.logo{
+    width: 23%;
+    max-width: 100%;
+    height: auto;
+    margin: 30px 37px;
+}
+.main-nav {
+    text-align: center;
+}
+.nav-list{
+    list-style-type: none !important;
+    display: block;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+.menu-link{
+    color:black;
+    text-align: center;
+    justify-content: center;
+    }
 
+.header-button a{
+        width: 14.75em;
+        height: 80px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background-color: #dc9f96;
+        text-align: center;   
+        border-radius: 0;
+}
 
+/**************** FOOTER ******************/
+#site-footer.sticky-bottom {
+    position: sticky;
+    bottom: 0;
+}
+.site-footer {
+    display: flex;
+        align-items: center;
+        justify-content: space-between;
+        background-color: var(--main-color);
+        width: 100%;
+        height: 80px;
+        margin: auto;
+        padding-right: 0;
+    }
+.footer-nav{
+
+}
