Avancées dans la construction des pages : formulaires intégrés + structures et style des pages quasi terminées (reste quelques éléments à peaufiner). Prochaines étapes : adapter le responsive + intégrer Admin

--- a/themes/planty/css/theme.css
+++ b/themes/planty/css/theme.css
@@ -1,112 +1,167 @@
-/********** GENERAL ***********/
-
 @import url('https://fonts.googleapis.com/css2?family=Syne:wght@400;700;800&display=swap');
 
 
-*, /* Pour tous le site : Reset des valeurs par defaut */
-::before,
-::after {
+/* *, ::before, ::after {
   margin: 0;
   padding: 0;
-}
+  box-sizing: border-box;
+} */      /* pas necessaire sur un theme enfant */
+
 * {
-  font-family: "syne", sans-serif;
-}
-html {
-  font-family: "syne", sans-serif;
-}
-:root {
-  --main-color: white;
-  --main-bg-color: ;
-  --filter-bg-color: ;
-  --font-size-small: ;
-  --font-size-medium: ;
-  --max-width: ;
-  --min-width: ;
-}
-.hero{ /* conteneur de la canette */ 
-  height: 618px ;
-  width: 640px;
-  position: relative;
-  /* background-color: yellow; */
-}
-.canette{ /* *** home image centrale canette *** */
-  z-index: 2;
-  position: absolute;
-}
-.leaf-left{ /* *** home image centrale feuille gauche *** */
-  z-index: 1;
-  position: absolute;
-  left: 0px;
-  bottom: 70px; 
-  /* background-color: red; */
-}
-.leaf-right{ /* *** home image centrale feuille droite *** */
-  z-index: 1;
-  position: absolute;
-  right: 0;
-  bottom:70px; 
-  /* background-color: green */
-}
-.divider{
-  border-radius: 0 0 20% 20%;
-}
-.toto{ 
-  border: green solid 5px !important;
-}
-.wpcf7-form-control {
-  border: green solid 5px !important;
-  justify-content: center !important;
-}
-.submit{
-  border: red solid 5px !important;
+  font-family: 'Syne', sans-serif;
 }
 
-/********** HEADER **************/
+/* Variables */
+
+:root {
+  --main-color: #ECE2DA;
+  --secondary-color: #E0B9B4;
+  --tertiary-color: #E3D9D0;
+  --accent-color: #3B8E46;
+
+  --color-btn: #DC9F96;
+  --color-btn-hover: #C02E44;
+
+  --color-white: #FFFFFF;
+  --color-black: #000000;
+}
+
+/***************** HEADER *****************/
+/*header */
 #site-header.sticky-top {
   position: sticky;
   z-index: 10;
   top: 0;
-  background-color: white; 
+  background-color: white;
 }
 .site-header {
-  width: 100%; /* Largeur de 100% pour s'adapter à la largeur de l'écran */
+  width: 100%;
+  /* Largeur de 100% pour s'adapter à la largeur de l'écran */
   display: flex;
   height: 80px;
   align-items: center;
   justify-content: space-between;
   background-color: white;
 }
-.nav-list{
-  /* menu  */
+
+/* Logo */
+.custom-logo{
+  margin-left: 36px;
+}
+
+/*Navigation*/
+.nav-list {
   list-style-type: none;
-  margin: 0 auto; 
+  margin: 0 auto;
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
-.menu-item-29 .menu-link{
-    color: black;
-    padding : 20px 60px;
-    height: 100%;
+.menu-item-29 .menu-link {
+  color: black;
+  padding: 20px 60px;
+  height: 100%;
 }
-.menu-item-34 .menu-link{
-    color: rgb(255, 255, 255);
-    width: 14.75em;
-    height: 80px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: #dc9f96;
-    text-align: center;
+/* Navigation Links */
+.menu-item-34 .menu-link {
+  color: rgb(255, 255, 255);
+  width: 14.75em;
+  height: 80px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #dc9f96;
+  text-align: center;
 }
 
+/* Navigation Links Hover : pas précisé */
+/* Navigation Links Active : pas précisé */
 
+/***************** HERO *****************/
 
+/* Hero title : avec gutenberg */
 
-/* COMMANDER */
+/* Hero Image */
+.hero { /* conteneur de la canette */ 
+  height: 618px ;
+  width: 640px;
+  position: relative;
+}
+.canette { 
+  z-index: 2;
+  position: absolute;
+}
+.leaf-left { 
+  z-index: 1;
+  position: absolute;
+  left: 0px;
+  bottom: 70px; 
+  }
+.leaf-right { 
+  z-index: 1;
+  position: absolute;
+  right: 0;
+  bottom:70px; 
+}
+
+/***************** PAGE HOME *****************/
+.shape-divider-container{
+  margin: 0;
+}
+.shape-divider1{
+  z-index: 1;
+  position: absolute;
+  width: 100%; 
+  min-height: 70px; 
+  border: 0;
+  margin: 0;
+}
+.shape-divider2 {
+  z-index: 2;
+  position: absolute;
+  transform: translateY(-5px);
+  border: 0;
+}
+.bloc-comment{
+  align-items: center;
+  justify-content: space-between ;
+}
+.footer-cans{
+  padding-top: 70px;
+  margin: 0px;
+  background-color: #FFFFFF;
+}
+.entry-content[ast-blocks-layout]>figure{ /*class trouvée sur l'inspecteur (pour enlever la marge en bas des canettes) */
+  margin-bottom: 0;
+}
+/***************** PAGE NOUS-RENCONTRER *****************/
+
+.fleurs-top{
+    position: relative;
+    right: 450px;
+     top: 70px;
+}
+.equipe-feuille{
+    z-index: 1;
+    position: relative;
+    left: -130px;
+    top: 92px;
+}
+
+/* Formulaire  */
+.sr-only {
+  position: absolute;
+  left: -10000px;
+  top: auto;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+}
+
+/**************** PAGE COMMANDER *****************/
 
 .informations-livraisons {
+  align-items: center;
   display: flex;
   flex-wrap: wrap;
   gap: 20px;
@@ -133,6 +188,7 @@ html {
 
 .contact-form__field {
   margin-bottom: 1rem;
+  flex-direction: column;
 }
 
 .contact-form__label {
@@ -147,51 +203,15 @@ html {
   border: 1px solid #ccc;
   border-radius: 4px;
 }
-
-/* Menu Mobile */
-.mobile-menu {
-  display: none;
-  /* Masquer par défaut */
+.info-livraison-button{
+  border:  1px solid #dc9f96 !important;
+  border-radius: 7px !important;
+  align-items: center !important;
+  background-color: #DC9F96 !important;
 }
-
-/* Menu Desktop */
-/* @ importer qq chose pour tous les medias screen (écran) existe aussi all pour tous les appareils ou print pour impression */
-@media screen and (min-width: 769px) {
-  .desktop-menu {
-    display: block;
-    /* Afficher pour les écrans de bureau à partir de 769px */
-  }
-}
-
-/* Menu Mobile */
-@media screen and (max-width: 768px) {
-  .desktop-menu {
-    display: none;
-    /* Masquer pour les écrans mobiles */
-  }
-
-  .mobile-menu {
-    display: block;
-    /* Afficher pour les écrans mobiles */
-  }
-}
-
-
-/* BODY accueil */
-#titleh2{
-color:red
-}
-
-
-
-/* HOME */
-
-.shape-divider2 {
-  transform: translateY(-90px);
-}
-
 
 /**************** FOOTER ******************/
+
 #site-footer.sticky-bottom {
   position: sticky;
   bottom: 0;
@@ -200,10 +220,43 @@ color:red
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: var(--main-color);
+  background-color: #FFFFFF;
   width: 100%;
   height: 60px;
   }
 .menu-item-37 .menu-link {
     color: black;
+}
+
+
+/* RESPONSIVE */
+
+.mobile-menu {
+  display: none;
+  /* Masquer par défaut */
+}
+
+/* Menu Mobile */
+@media all and (max-width: 1200px) {
+  .desktop-menu {
+    display: none;
+    /* Masquer pour les écrans mobiles */
+  }
+  .mobile-menu {
+    display: block;
+    /* Afficher pour les écrans mobiles */
+  }
+  .container {
+      width: 970px;
+  }
+}
+
+@media all and (min-width: 768px) {
+    .desktop-menu {
+    display: block;
+    /* Afficher pour les écrans de bureau à partir de 769px */
+    }
+    .container {
+      width: 750px;
+    }
 }
